--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="./src/Components/Styles/App.css">
 
+    <link rel="manifest" href="manifest.json">
+
   </head>
   <body>
     <div id="root"></div>
